[gd_scene load_steps=2 format=3 uid="uid://ba7bbrya53oqt"]

[ext_resource type="Script" path="res://Nodes/DMX Table/DMX_table.gd" id="1_5cwq3"]

[node name="DMXTable" type="GraphNode"]
offset_right = 266.0
offset_bottom = 361.0
resizable = true
title = "DMX Table"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 0, 0.498039, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_5cwq3")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "DMX Out"
horizontal_alignment = 2

[node name="Row1" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Row1"]
layout_mode = 2
size_flags_horizontal = 2
text = "DMX Universe"

[node name="Universe" type="SpinBox" parent="Row1"]
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 9.22337e+18
value = 1.0

[node name="Row2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="Row2"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Row2"]
custom_minimum_size = Vector2(172.575, 31.67)
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Row2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="HSeparator" type="HSeparator" parent="Row2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Row2"]
layout_mode = 2

[node name="Add" type="Button" parent="Row2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Value"

[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="value_changed" from="Row1/Universe" to="." method="_on_universe_value_changed"]
[connection signal="pressed" from="Row2/HBoxContainer/Add" to="." method="_on_add_pressed"]
